{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 218,
  "lineage": "9fac1713-2073-ab64-7d26-df2884c7905d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chef_automate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e23ea41be77feacd",
            "arn": "arn:aws:ec2:us-west-2:496323866215:instance/i-007aaef3db3815ec8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "id": "i-007aaef3db3815ec8",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "anthonyrees_sa_aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0121e99232d9fcbc9",
            "private_dns": "ip-172-31-54-11.us-west-2.compute.internal",
            "private_ip": "172.31.54.11",
            "public_dns": "ec2-18-237-113-205.us-west-2.compute.amazonaws.com",
            "public_ip": "18.237.113.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 300,
                "volume_id": "vol-00eedce22d0d35761",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9734c5d4c7af7ca",
            "tags": {
              "Name": "chef_automate_anthonyrees_e34d74f1",
              "X-Application": "national_parks",
              "X-Contact": "anthony@chef.io",
              "X-Customer": "testing",
              "X-Dept": "sales",
              "X-Project": "hab_demos",
              "X-TTL": "8"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ef08c86a8da7607f"
            ]
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_subnet.habmgmt-subnet-a",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workstation",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0829d7f19db0f2b10",
            "arn": "arn:aws:ec2:us-west-2:496323866215:instance/i-0409220fbaa4e3c54",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "testKitchenAndKnifeEc2",
            "id": "i-0409220fbaa4e3c54",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "anthonyrees_sa_aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-00828198a3700970b",
            "private_dns": "ip-172-31-54-221.us-west-2.compute.internal",
            "private_ip": "172.31.54.221",
            "public_dns": "ec2-34-215-253-219.us-west-2.compute.amazonaws.com",
            "public_ip": "34.215.253.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 300,
                "volume_id": "vol-0f934b0b03238a072",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9734c5d4c7af7ca",
            "tags": {
              "Name": "anthony@chef.io-workstation-0",
              "X-Application": "national_parks",
              "X-Contact": "anthony@chef.io",
              "X-Customer": "testing",
              "X-Dept": "sales",
              "X-Project": "hab_demos",
              "X-TTL": "8"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04faf9d6151700b6b"
            ]
          },
          "dependencies": [
            "aws_instance.chef_automate",
            "aws_security_group.chef_automate",
            "aws_security_group.habworkshop",
            "aws_subnet.habmgmt-subnet-a",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "habmgmt-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-054c558e7118f3a91",
            "owner_id": "496323866215",
            "tags": {
              "Name": "habmgmt-gateway"
            },
            "vpc_id": "vpc-097251fdfc5061b5b"
          },
          "dependencies": [
            "aws_vpc.habmgmt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "chef_automate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:496323866215:loadbalancer/app/chef-automate-e34d74f1/10f531fcdb0fc26e",
            "arn_suffix": "app/chef-automate-e34d74f1/10f531fcdb0fc26e",
            "dns_name": "chef-automate-e34d74f1-1463403290.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:496323866215:loadbalancer/app/chef-automate-e34d74f1/10f531fcdb0fc26e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "chef-automate-e34d74f1",
            "security_groups": [
              "sg-0ef08c86a8da7607f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0470145eb36f414f6"
              },
              {
                "subnet_id": "subnet-0c9734c5d4c7af7ca"
              }
            ],
            "subnets": [
              "subnet-0470145eb36f414f6",
              "subnet-0c9734c5d4c7af7ca"
            ],
            "tags": {
              "Name": "testing-hab_demos_e34d74f1_national_parks_alb",
              "X-Application": "national_parks",
              "X-Contact": "anthony@chef.io",
              "X-Customer": "testing",
              "X-Dept": "sales",
              "X-Project": "hab_demos",
              "X-TTL": "8"
            },
            "vpc_id": "vpc-097251fdfc5061b5b",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_subnet.habmgmt-subnet-a",
            "aws_subnet.habmgmt-subnet-b",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chef_automate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:496323866215:listener/app/chef-automate-e34d74f1/10f531fcdb0fc26e/4af2efde36aace95",
            "certificate_arn": "arn:aws:acm:us-west-2:496323866215:certificate/1ca6e53c-5b80-4292-a42b-5123c84c2051",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:496323866215:targetgroup/e34d74f1/7043fd4f33114a2f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:496323866215:listener/app/chef-automate-e34d74f1/10f531fcdb0fc26e/4af2efde36aace95",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:496323866215:loadbalancer/app/chef-automate-e34d74f1/10f531fcdb0fc26e",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.chef_automate",
            "aws_lb_target_group.chef_automate",
            "aws_security_group.chef_automate",
            "aws_subnet.habmgmt-subnet-a",
            "aws_subnet.habmgmt-subnet-b",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "chef_automate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:496323866215:targetgroup/e34d74f1/7043fd4f33114a2f",
            "arn_suffix": "targetgroup/e34d74f1/7043fd4f33114a2f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:496323866215:targetgroup/e34d74f1/7043fd4f33114a2f",
            "lambda_multi_value_headers_enabled": false,
            "name": "e34d74f1",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-097251fdfc5061b5b"
          },
          "dependencies": [
            "aws_lb.chef_automate",
            "aws_security_group.chef_automate",
            "aws_subnet.habmgmt-subnet-a",
            "aws_subnet.habmgmt-subnet-b",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "chef_automate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:496323866215:targetgroup/e34d74f1/7043fd4f33114a2f-20200329211727500300000001",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:496323866215:targetgroup/e34d74f1/7043fd4f33114a2f",
            "target_id": "i-007aaef3db3815ec8"
          },
          "dependencies": [
            "aws_instance.chef_automate",
            "aws_lb.chef_automate",
            "aws_lb_target_group.chef_automate",
            "aws_security_group.chef_automate",
            "aws_subnet.habmgmt-subnet-a",
            "aws_subnet.habmgmt-subnet-b",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "habmgmt-internet-access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-054c558e7118f3a91",
            "id": "r-rtb-056ae329272ca671d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056ae329272ca671d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.habmgmt-gateway",
            "aws_vpc.habmgmt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chef_automate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:496323866215:security-group/sg-0ef08c86a8da7607f",
            "description": "Chef Automate Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef08c86a8da7607f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4222,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4222
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 7331,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 7331
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9400
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9631,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9631
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9631,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 9631
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9638,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9638
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9638,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 9638
              }
            ],
            "name": "chef_automate_e34d74f1",
            "name_prefix": null,
            "owner_id": "496323866215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-hab_demos_e34d74f1_national_parks_security_group",
              "X-Application": "national_parks",
              "X-Contact": "anthony@chef.io",
              "X-Customer": "testing",
              "X-Dept": "sales",
              "X-Project": "hab_demos",
              "X-TTL": "8"
            },
            "timeouts": null,
            "vpc_id": "vpc-097251fdfc5061b5b"
          },
          "dependencies": [
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "habworkshop",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:496323866215:security-group/sg-04faf9d6151700b6b",
            "description": "Security group for Habitat workshop for Windows",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04faf9d6151700b6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5985,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5986
              }
            ],
            "name": "habworkshop-e34d74f1",
            "name_prefix": null,
            "owner_id": "496323866215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-hab_demos-e34d74f1-national_parks-security_group",
              "X-Application": "national_parks",
              "X-Contact": "anthony@chef.io",
              "X-Customer": "testing",
              "X-Dept": "sales",
              "X-Project": "hab_demos",
              "X-TTL": "8"
            },
            "timeouts": null,
            "vpc_id": "vpc-097251fdfc5061b5b"
          },
          "dependencies": [
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_9638_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9638,
            "id": "sgrule-266691592",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": "sg-0ef08c86a8da7607f",
            "to_port": 9638,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_allow_22_tcp_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3143354142",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_allow_9631_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9631,
            "id": "sgrule-794430750",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": "sg-0ef08c86a8da7607f",
            "to_port": 9631,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_allow_9631_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9631,
            "id": "sgrule-2332405489",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": "sg-0ef08c86a8da7607f",
            "to_port": 9631,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_allow_9638_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9638,
            "id": "sgrule-2881144807",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": "sg-0ef08c86a8da7607f",
            "to_port": 9638,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_chef_automate_allow_2379_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2379,
            "id": "sgrule-2432508826",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": "sg-0ef08c86a8da7607f",
            "to_port": 2380,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_chef_automate_allow_4222_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 4222,
            "id": "sgrule-2205638037",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4222,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_chef_automate_allow_443_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-4211765339",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_chef_automate_allow_5432_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 5432,
            "id": "sgrule-1017809542",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": "sg-0ef08c86a8da7607f",
            "to_port": 5432,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_chef_automate_allow_7331_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 7331,
            "id": "sgrule-1779636928",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": "sg-0ef08c86a8da7607f",
            "to_port": 7331,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_chef_automate_allow_80_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-231840427",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_chef_automate_allow_9200_to_9400_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9200,
            "id": "sgrule-926539025",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": "sg-0ef08c86a8da7607f",
            "to_port": 9400,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rdp_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3389,
            "id": "sgrule-2237034389",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04faf9d6151700b6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.habworkshop",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_winrm_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 5985,
            "id": "sgrule-1081374766",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04faf9d6151700b6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5986,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.habworkshop",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "linux_egress_allow_0-65535_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-221232510",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ef08c86a8da7607f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.chef_automate",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "windows_egress_allow_0-65535_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2334841768",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04faf9d6151700b6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.habworkshop",
            "aws_vpc.habmgmt-vpc",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "habmgmt-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:496323866215:subnet/subnet-0c9734c5d4c7af7ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.54.0/24",
            "id": "subnet-0c9734c5d4c7af7ca",
            "map_public_ip_on_launch": true,
            "owner_id": "496323866215",
            "tags": {
              "Name": "habmgmt-subnet-a"
            },
            "vpc_id": "vpc-097251fdfc5061b5b"
          },
          "dependencies": [
            "aws_vpc.habmgmt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "habmgmt-subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:496323866215:subnet/subnet-0470145eb36f414f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.55.0/24",
            "id": "subnet-0470145eb36f414f6",
            "map_public_ip_on_launch": true,
            "owner_id": "496323866215",
            "tags": {
              "Name": "habmgmt-subnet-b"
            },
            "vpc_id": "vpc-097251fdfc5061b5b"
          },
          "dependencies": [
            "aws_vpc.habmgmt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "habmgmt-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:496323866215:vpc/vpc-097251fdfc5061b5b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0cb90a8c398abf5b4",
            "default_route_table_id": "rtb-056ae329272ca671d",
            "default_security_group_id": "sg-0a7c029f9a89e2f72",
            "dhcp_options_id": "dopt-90b951f5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-097251fdfc5061b5b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-056ae329272ca671d",
            "owner_id": "496323866215",
            "tags": {
              "Name": "anthonyrees-vpc",
              "X-Application": "national_parks",
              "X-Contact": "anthony@chef.io",
              "X-Customer": "testing",
              "X-Dept": "sales",
              "X-Project": "hab_demos",
              "X-TTL": "8"
            }
          }
        }
      ]
    }
  ]
}